# DigitalBits

./: .dockerignore  .gitignore  Bug-Template.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.prebuild  INSTALL-Windows.md  INSTALL.md  Makefile.am  README.md  autogen.sh  config.h.in  configure.ac  digitalbits-core.service  digitalbits.cfg  install-sh  ledger_test.txt  sonar-project.properties
lib/: CMakeLists.txt  spdlog.cpp
lib/http/: CMakeLists.txt
lib/json/: CMakeLists.txt
lib/libmedida/: CMakeLists.txt  libmedida.vcxproj  libmedida.vcxproj.filters
lib/libsodium/: CMakeLists.txt  libsodium.vcxproj  libsodium.vcxproj.filters
lib/soci/: CMakeLists.txt
lib/sqlite/: CMakeLists.txt
lib/tracy/: CMakeLists.txt
lib/util/: CMakeLists.txt  cbitset.c  cbitset.h  cbitset_portability.h  stdrandom.h  uint128_t.h
lib/xdrpp/: CMakeLists.txt
src/: CMakeLists.txt  Makefile.am
src/bucket/: Bucket.cpp  Bucket.h  BucketApplicator.cpp  BucketApplicator.h  BucketInputIterator.cpp  BucketList.cpp  BucketManager.h  BucketManagerImpl.cpp  BucketManagerImpl.h  BucketMergeMap.cpp  BucketOutputIterator.cpp  CMakeLists.txt  FutureBucket.cpp  LedgerCmp.h  MergeKey.cpp
src/catchup/: ApplyBucketsWork.cpp  ApplyBucketsWork.h  ApplyBufferedLedgersWork.cpp  ApplyCheckpointWork.cpp  ApplyCheckpointWork.h  ApplyLedgerWork.cpp  CMakeLists.txt  CatchupConfiguration.cpp  CatchupConfiguration.h  CatchupManager.h  CatchupManagerImpl.cpp  CatchupManagerImpl.h  CatchupRange.cpp  CatchupRange.h  CatchupWork.cpp  CatchupWork.h  DownloadApplyTxsWork.cpp  VerifyLedgerChainWork.cpp  VerifyLedgerChainWork.h
src/crypto/: ByteSlice.h  CMakeLists.txt  Curve25519.cpp  Curve25519.h  Random.cpp  SHA.cpp  SecretKey.cpp  SecretKey.h  ShortHash.cpp  ShortHash.h
src/database/: CMakeLists.txt  Database.cpp  Database.h  DatabaseUtils.cpp  DatabaseUtils.h
src/herder/: CMakeLists.txt  Herder.h  HerderImpl.cpp  HerderImpl.h  HerderPersistence.h  HerderPersistenceImpl.cpp  HerderSCPDriver.cpp  HerderSCPDriver.h  LedgerCloseData.cpp  LedgerCloseData.h  PendingEnvelopes.cpp  PendingEnvelopes.h  QuorumIntersectionChecker.h  QuorumIntersectionCheckerImpl.cpp  QuorumIntersectionCheckerImpl.h  QuorumTracker.cpp  SurgePricingUtils.cpp  SurgePricingUtils.h  TransactionQueue.cpp  TransactionQueue.h  TxQueueLimiter.cpp  TxQueueLimiter.h  TxSetFrame.cpp  TxSetFrame.h  Upgrades.cpp  Upgrades.h
src/history/: CMakeLists.txt  FileTransferInfo.cpp  HistoryArchive.cpp  HistoryArchive.h  HistoryArchiveManager.cpp  HistoryArchiveManager.h  HistoryArchiveReportWork.cpp  HistoryManager.h  HistoryManagerImpl.cpp  HistoryManagerImpl.h  StateSnapshot.cpp
src/historywork/: BatchDownloadWork.cpp  CMakeLists.txt  CheckSingleLedgerHeaderWork.cpp  CheckSingleLedgerHeaderWork.h  DownloadBucketsWork.cpp  DownloadVerifyTxResultsWork.cpp  FetchRecentQsetsWork.cpp  FetchRecentQsetsWork.h  GetAndUnzipRemoteFileWork.cpp  GetAndUnzipRemoteFileWork.h  GetHistoryArchiveStateWork.cpp  GetHistoryArchiveStateWork.h  GetRemoteFileWork.cpp  MakeRemoteDirWork.cpp  MakeRemoteDirWork.h  Progress.cpp  PublishWork.cpp  PutHistoryArchiveStateWork.cpp  PutHistoryArchiveStateWork.h  PutRemoteFileWork.cpp  PutRemoteFileWork.h  PutSnapshotFilesWork.cpp  ResolveSnapshotWork.cpp  ResolveSnapshotWork.h  RunCommandWork.cpp  VerifyBucketWork.cpp  VerifyBucketWork.h  VerifyTxResultsWork.cpp  WriteSnapshotWork.cpp  WriteVerifiedCheckpointHashesWork.cpp
src/invariant/: AccountSubEntriesCountIsValid.cpp  BucketListIsConsistentWithDatabase.cpp  BucketListIsConsistentWithDatabase.h  CMakeLists.txt  ConservationOfDigitalBits.cpp  ConstantProductInvariant.cpp  ConstantProductInvariant.h  Invariant.h  InvariantManager.h  InvariantManagerImpl.cpp  InvariantManagerImpl.h  LedgerEntryIsValid.cpp  LedgerEntryIsValid.h  LiabilitiesMatchOffers.cpp  OrderBookIsNotCrossed.cpp  OrderBookIsNotCrossed.h  SponsorshipCountIsValid.cpp
src/ledger/: CMakeLists.txt  CheckpointRange.cpp  CheckpointRange.h  FlushAndRotateMetaDebugWork.cpp  FlushAndRotateMetaDebugWork.h  InMemoryLedgerTxn.cpp  InMemoryLedgerTxn.h  InMemoryLedgerTxnRoot.cpp  InMemoryLedgerTxnRoot.h  InternalLedgerEntry.cpp  InternalLedgerEntry.h  LedgerHashUtils.h  LedgerHeaderUtils.cpp  LedgerHeaderUtils.h  LedgerManager.h  LedgerManagerImpl.cpp  LedgerManagerImpl.h  LedgerRange.cpp  LedgerRange.h  LedgerTxn.cpp  LedgerTxn.h  LedgerTxnAccountSQL.cpp  LedgerTxnClaimableBalanceSQL.cpp  LedgerTxnDataSQL.cpp  LedgerTxnEntry.cpp  LedgerTxnEntry.h  LedgerTxnImpl.h  LedgerTxnLiquidityPoolSQL.cpp  LedgerTxnOfferSQL.cpp  LedgerTxnTrustLineSQL.cpp  TrustLineWrapper.cpp  TrustLineWrapper.h  readme.md
src/main/: Application.cpp  Application.h  ApplicationImpl.cpp  ApplicationImpl.h  ApplicationUtils.cpp  ApplicationUtils.h  CMakeLists.txt  CommandHandler.cpp  CommandLine.cpp  CommandLine.h  Config.cpp  Config.h  Diagnostics.cpp  Diagnostics.h  DigitalBitsCoreVersion.cpp.in  ExternalQueue.cpp  Maintainer.cpp  PersistentState.cpp  PersistentState.h  dumpxdr.cpp  dumpxdr.h  main.cpp
src/overlay/: BanManagerImpl.cpp  CMakeLists.txt  Floodgate.cpp  Floodgate.h  ItemFetcher.h  OverlayManager.h  OverlayManagerImpl.cpp  OverlayManagerImpl.h  OverlayMetrics.cpp  OverlayMetrics.h  Peer.cpp  Peer.h  PeerAuth.cpp  PeerBareAddress.cpp  PeerDoor.cpp  PeerManager.cpp  PeerManager.h  PeerSharedKeyId.cpp  RandomPeerSource.cpp  RandomPeerSource.h  SurveyManager.cpp  SurveyManager.h  SurveyMessageLimiter.cpp  TCPPeer.cpp  TCPPeer.h  Tracker.cpp
src/process/: CMakeLists.txt  ProcessManager.h  ProcessManagerImpl.cpp  ProcessManagerImpl.h
src/scp/: BallotProtocol.cpp  BallotProtocol.h  CMakeLists.txt  LocalNode.cpp  LocalNode.h  NominationProtocol.cpp  NominationProtocol.h  QuorumSetUtils.cpp  SCP.cpp  SCP.h  SCPDriver.cpp  SCPDriver.h  Slot.cpp  Slot.h
src/secrets/: CMakeLists.txt  SecretsManager.h  SecretsManagerImpl.cpp  SecretsManagerImpl.h
src/simulation/: CMakeLists.txt  CoreTests.cpp  LoadGenerator.cpp  LoadGenerator.h  Simulation.cpp  Simulation.h  Topologies.cpp  Topologies.h
src/test/: CMakeLists.txt  FuzzerImpl.cpp  TxTests.h  (+17 more)
(+277 files in other folders)
